<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:layout_gravity="top">
	    	<ImageView 
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:contentDescription="@string/up_vote"
	        	android:src="@drawable/arrow_up_unselected"
	        	android:layout_gravity="center"
	        	android:id="@+id/up_vote"/>
		    <TextView 
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	style="@style/article_score"
	        	android:layout_gravity="center"
	        	android:id="@+id/score"/>
		    <ImageView
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:contentDescription="@string/down_vote"
	        	android:src="@drawable/arrow_down_unselected"
	        	android:layout_gravity="center"
	        	android:id="@+id/down_vote"/>
    	</LinearLayout>
	    <WebView
	        android:id="@+id/comment"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<TextView
    	    style="@style/comment_button"
    		android:id="@+id/reply"
    		android:text="@string/reply"/>
    	<TextView
    	    style="@style/comment_button"
    		android:id="@+id/hide_children"
    		android:text="@string/hide_children"/>
    </LinearLayout>
</LinearLayout>