<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <ImageView 
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/up_vote"
        	android:src="@drawable/arrow_up_unselected"
        	android:layout_gravity="center"
        	android:id="@+id/up_vote"/>
	    <TextView 
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	style="@style/article_score"
        	android:layout_gravity="center"
        	android:id="@+id/score"/>
	    <ImageView
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:contentDescription="@string/down_vote"
        	android:src="@drawable/arrow_down_unselected"
        	android:layout_gravity="center"
        	android:id="@+id/down_vote"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	    <LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/thumbnail"
		        android:id="@+id/thumbnail"/>
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/article_title"
		        android:id="@+id/title"/>
		</LinearLayout>
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/submitted_on"/>
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/article_submitted_by"
		        android:text="@string/submitted_by"/>"
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/article_submitted_by"
		        android:id="@+id/submitted_by"/>
	    </LinearLayout>
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/article_submitted_by"
		        android:text="@string/submitted_to"/>
		    <TextView 
				android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/article_subreddit"
		        android:id="@+id/submitted_to"/>
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/article_submitted_by"
		        android:text="@string/submitted_on"/>
	    </LinearLayout>
		<LinearLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			    <TextView 
					android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        style="@style/article_comments"
			        android:id="@+id/comments"/>
		</LinearLayout>
    </LinearLayout>
</LinearLayout>
